Address Mickael's comments
Signed-off-by: OwenCorrigan76 <owencorrigan76@gmail.com>